feat: 初始化项目

--- a/entry/build-profile.json5
+++ b/entry/build-profile.json5
@@ -4,11 +4,13 @@
   },
   "targets": [
     {
-      "name": "default",
-      "runtimeOS": "HarmonyOS"
-    },
+      "name": "default"
+      ,
+      "runtimeOS":"HarmonyOS"
+    }
+    ,
     {
-      "name": "ohosTest",
+    "name": "ohosTest",
     }
   ]
 }
