--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -4,23 +4,22 @@
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
-    "deviceTypes": [
-      "phone",
-      "tablet"
-    ],
+    "deviceTypes":  ["phone","tablet"],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
     "abilities": [
-      {
+    {
         "name": "EntryAbility",
         "srcEntry": "./ets/entryability/EntryAbility.ts",
         "description": "$string:EntryAbility_desc",
         "icon": "$media:icon",
         "label": "$string:EntryAbility_label",
-        "startWindowIcon": "$media:icon",
-        "startWindowBackground": "$color:start_window_background",
-        "exported": true,
+        "startWindowIcon" : "$media:icon",
+        "startWindowBackground" : "$color:start_window_background"
+          ,
+        "exported": true
+          ,
         "skills": [
           {
             "entities": [
@@ -31,7 +30,6 @@
             ]
           }
         ]
-      }
-    ]
+      }]
   }
 }
